@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -168,7 +168,7 @@ public class ContentDisposition {
 
     /**
      * Retrieve a RFC2045 style string representation of
-     * this ContentDisposition. Returns <code>null</code> if
+     * this ContentDisposition. Returns an empty string if
      * the conversion failed.
      *
      * @return	RFC2045 style string
@@ -176,7 +176,7 @@ public class ContentDisposition {
      */
     public String toString() {
 	if (disposition == null)
-	    return null;
+	    return "";
 
 	if (list == null)
 	    return disposition;
