@@ -22,6 +22,7 @@ K 5682	add FetchProfile.Item.SIZE
 K 5683	fix protected fields in final classes in javax.mail.search
 K 5684	add MimeMultipart(String subtype, BodyPart... bps) constructor
 K 5686	ParameterList needs to support use by IMAP
+K 5687	ContentType.toString & ContentDisposition.toString shouldn't return null
 
 
 		  CHANGES IN THE 1.4.6 RELEASE
